add set comment api
