# app/routes/api/api-v0.0.1/private.js
@@ -2,9 +2,10 @@ const express = require('express');
 const router = express.Router();
 
 const HomeController = require('app/http/controllers/api/v0.0.1/homeController');
+const commentValidator = require('app/http/validators/commentValidator');
 
-
-router.get('/user' , HomeController.user);
-router.get('/user/history' , HomeController.history);
+router.get('/user', HomeController.user);
+router.get('/user/history', HomeController.history);
+router.post("/comment", commentValidator.handle(), HomeController.comment);
 
 module.exports = router;
